--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,8 @@
 /* Tailwind component classes registered by plugins*/
 @import "node_modules/tailwindcss/components";
 /* Swiper lirary for slider */
+@import "assets/css/leaflet.css";
+@import "assets/css/MarkerCluster.Default.css";
 @import "assets/css/site";
 /* Tailwind's utility classes - generated based on config file */
 @import "node_modules/tailwindcss/utilities";
