--- a/layouts/partials/mainJs.html
+++ b/layouts/partials/mainJs.html
@@ -1,13 +1,15 @@
+{{- $leaflet := resources.Get "js/leaflet.js" }}
+{{- $markercluster := resources.Get "js/leaflet.markercluster.js" }}
 {{- $main := resources.Get "js/main.js" }}
-{{- $bunldeJS := slice $main }}
+{{- $bunldeJS := slice $leaflet $markercluster $main }}
 
 {{- $bunldeJS = $bunldeJS | resources.Concat "js/bundle.js" | fingerprint | js.Build}}
 
-{{- $babelConfig :="assets/js/babel.config.js" }}
+{{/* {{- $babelConfig :="assets/js/babel.config.js" }}
 {{ if .Site.IsServer}}
 {{- $bunldeJS = $bunldeJS | babel (dict "verbose" true "config" $babelConfig) -}}
 {{ else -}}
 {{- $bunldeJS = $bunldeJS | babel (dict "noComments" true "minified" true "config" $babelConfig) -}}
-{{ end -}}
+{{ end -}} */}}
 
 <script src="{{$bunldeJS.Permalink}}"></script>
