--- a/layouts/partials/head/css.html
+++ b/layouts/partials/head/css.html
@@ -8,6 +8,6 @@
 
 {{ printf `<style>
   %s
-</style>` ($styles | minify | resources.PostProcess).Content | safeCSS}}
+</style>` ($styles | minify | resources.PostProcess).Content | safeHTML }}
 
 {{ end -}}
