--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div data-netlify-identity-menu></div>
-<div data-netlify-identity-button>Login with Netlify Identity</div>
+<div data-netlify-identity-button></div>
 <div class="py-12 container">
     <div id="map" class="h-96 w-1/2"></div>
 </div>
