--- a/assets/css/MarkerCluster.Default.css
+++ b/assets/css/MarkerCluster.Default.css
@@ -1,3 +1,4 @@
+/* purgecss start ignore */
 .marker-cluster-small {
 	background-color: rgba(181, 226, 140, 0.6);
 }
@@ -41,3 +42,5 @@
 .marker-cluster span {
 	line-height: 30px;
 }
+
+/* purgecss end ignore */
