--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,6 @@
-<header class="bg-black">
-  <div class="container py-2 space-y-4 md:space-y-0 flex flex-col md:flex-row items-center justify-between">
+<header class="bg-purple">
+  <div class="container py-2 flex items-center justify-between">
     <h1 class="text-white text-2xl">{{ .Site.Title }}</h1>
+    <div data-netlify-identity-button class="bg-white px-4 py-2 text-sm"></div>
   </div>
 </header>
