logout btn added

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header class="bg-purple">
   <div class="container py-2 flex items-center justify-between">
     <h1 class="text-white text-2xl">{{ .Site.Title }}</h1>
-    <div data-netlify-identity-button class="bg-white px-4 py-2 text-sm"></div>
+    <button class="bg-white px-4 py-2 text-sm" id="logout" hidden>Logout</button>
   </div>
 </header>
