--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,4 +3,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=yes">
   {{ partial "head/css.html" . -}}
   <title>{{- .Site.Title }}</title>
+
+  {{- $identity_widget := resources.Get "js/netlify-identity-widget.js" }}
+  <script src="{{$identity_widget.Permalink}}"></script>
 </head>
