--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1,3 +1,4 @@
+/* purgecss start ignore */
 .leaflet-cluster-anim .leaflet-marker-icon,
 .leaflet-cluster-anim .leaflet-marker-shadow {
     transition: transform 0.3s ease-out, opacity 0.3s ease-in;
@@ -17,3 +18,5 @@
 .netlify-identity-login {
     @apply px-4 py-2 bg-white
 }
+
+/* purgecss end ignore */
